--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "@angular/platform-browser": "^5.1.0",
     "@angular/platform-browser-dynamic": "^5.1.0",
     "@angular/router": "^5.1.0",
+    "bootstrap": "^4.3.1",
+    "chroma-js": "^2.0.6",
     "core-js": "^2.4.1",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.16.0",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
